[tool.poetry]
name = "ray-cutstom-model"
version = "0.1.0"
description = ""
authors = ["Sithael <chojnacki.jamie@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.1"
ray = {extras = ["data", "rllib", "serve", "train", "tune"], version = "^2.8.1"}
numpy = "^1.26.2"
pyglet = "^2.0.10"
pyopengl = "^3.1.7"
pygame = "^2.5.2"
async-timeout = "^4.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
